[B]Version 0.9.1[/B]
- Better error handling

[B]Version 0.9.0[/B]
- Updated for API changes

[B]Version 0.8.9[/B]
- Updated for API changes

[B]Version 0.8.8[/B]
- Added Patreon info

[B]Version 0.8.7[/B]
- More API updates

[B]Version 0.8.6[/B]
- Updates for new API

[B]Version 0.8.5[/B]
- Updates for API restrictions

[B]Version 0.8.4[/B]
- Removed code used for genres/sections

[B]Version 0.8.3[/B]
- Refactored to use Zero TV API

[B]Version 0.8.2[/B]
- Small tweak to hopefully fix odd issue on some Android devices

[B]Version 0.8.1[/B]
- Fixed broken channels
- Removed channels that do not have a source any longer

[B]Version 0.8.0[/B]
- Added Classic Arts Showcase

[B]Version 0.7.9[/B]
- Fixed: Court TV, QVC, RT, TBD
- Added: American Classics, , CombatGo, Comedy Dynamics, Docurama, FilmRise Free Movies, FilmRise Classic TV, Glewed TV, Hallypop, Hell's Kitchen, Kitchen Nightmares, Made in Hollywood, Music Baeble, Newsy, Outside TV, PeopleTV, Shout TV, Stirr Action, Stirr Biographies, Stirr Black Cinema, Stirr Classics, Stirr Comedy, Stirr Drama, Stirr Music, Stirr Travel, The Film Detective
- Removed: Soar

[B]Version 0.7.8[/B]
- removed rebase function

[B]Version 0.7.7[/B]
- version bump

[B]Version 0.7.6[/B]
- Removed broken live TV channels
- Fixed several live TV channels

[B]Version 0.7.5[/B]
- Updated functions for Tubi

[B]Version 0.7.4[/B]
- Fixed channel order

[B]Version 0.7.3[/B]
- Added Antenna TV
- Added CBN
- Added Cozi TV
- Added Retro TV
- Added This TV
- Added News Net
- Removed Celebrity Page Network

[B]Version 0.7.2[/B]
- Added Spirit TV
- Added Court TV

[B]Version 0.7.1[/B]
- Removed Spirit TV
- Removed RadioU
- Removed Pluto TV Westerns
- Fixed QVC
- Added QVC 3
- Added CMT Westerns

[B]Version 0.7.0[/B]
- Added support for searching Tubi

[B]Version 0.6.9[/B]
- Added France 24
- Removed Flashback TV
- Updated stream_plug

[B]Version 0.6.8[/B]
- Refactored to simplify get_stream_and_play function

[B]Version 0.6.7[/B]