@@ -1,3 +1,6 @@
+[B]Version 0.9.2[/B]
+- Added support for channel search
+
 [B]Version 0.9.1[/B]
 - Better error handling
 
